media/css/style.css
@font-face {
  font-family: GaramondPro;
  src: url('/media/static/garamond.otf');
}

* {
    margin: 0;
    padding: 0;
}

a {
    text-decoration: none;
    color: #FFF;
}

div {
    display: block;
    color: #444;
}

body {
    margin: 0 auto;
    background: #161616;
    font: normal 0.75em Helvetica,Verdana,Arial,sans-serif;
    min-height: 100%;
}

html {
    min-height: 100%;
}

.clearboth {
    clear: both;
}

#wrap {
    position: absolute;
    margin: 0 auto;
    max-width: 920px;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    padding-top: 68px;
    padding-bottom: 137px;
}

#top {
    position: relative;
    margin-top: -68px;
    height: 58px;
    margin-bottom: 12px;
}

#top #logo {
    width: 236px;
    height: 58px;
    background-image: url('/media/static/logo.png');
    float: left;
    display: block;
}

#top #menu {
    height: 58px;
}

#top #menu ul {
    list-style-type: none;
    position: absolute;
    bottom: 0;
    right: 5px;
    margin: 0;
    padding: 0;
    float: right;
}

#top #menu ul li {
    color: #FFF;
    font-size: 0.7em;
    margin: 10px;
    margin-right: 5px;
    float: left;
    padding-left: 15px;
    border-left: 1px solid #444;
}

#top #menu ul li:first-child {
    border-left: none;
    margin-right: 6px;
    padding-left: 0;
}

#top #menu ul li a {
    font-size: 1.3em;
    color: #DDD;
}

#top #menu ul li a:hover {
    font-size: 1.3em;
    color: #FFF;
}

#top .hr {
    display: block;
    position: absolute;
    top: 57px;
    background-color: #333;
    width: 100%;
    height: 1px;
}

#top #arrows {
    float: left;
    width: 100%;
    margin-top: 4px;
    font-size: 0.8em;
}

#top #arrows a {
    color: #666;
}

#prevlink {
    position: absolute;
    top: 43%;
    height: 60px;
    width: 31px;
    left: -35px;
    background-image: url('/media/static/leftarrow.gif');
}

#nextlink {
    position: absolute;
    top: 43%;
    height: 60px;
    width: 31px;
    right: -35px;
    background-image: url('/media/static/rightarrow.gif');
}

#content {
    text-align: center;
    margin-bottom: 20px;
    height: 100%;
    position: relative;
}

.image_content {
    background-color: #2B2B2B;
    padding: 5px;
    border: 1px solid #353535;
    display: inline-block;
    position: relative;
    margin: 0 auto;
    max-width: 100%;
    max-height: 100%;
}

#content img {
    max-width: 100%;
    max-height: 100%;
    margin: 0 auto;
    display: block;
}

#browse_grid {
    float: left;
    text-align: left;
    width: 76%;
}

#browse_grid img {
    border: none;
    width: 122px;
    height: 122px;
    margin-bottom: 3px;
    padding: 5px;
}

.browse_thumb {
    display: inline-block;
    width: 132px;
    height: 132px;
    background: #2B2B2B;
    border: 1px solid #353535;
}

#content #browse_menu {
    padding-left: 10px;
    float: left;
    width: 22%;
}

#content #browse_menu h1 {
    clear: both;
    text-align: left;
    color: #AAA;
    margin-bottom: 2px;
    font: normal 1.8em Garamond, GaramondPro;
}

#content #browse_menu ul {
    padding-bottom: 15px;
    padding-top: 5px;
}

#content #browse_menu li {
    list-style-type: none;
    width: 100%;
}

#content #browse_menu li a {
    text-align: left;
    color: #444;
    display: block;
    border-bottom: 1px solid #222;
    padding-bottom: 3px;
    padding-left: 5px;
    margin-bottom: 10px;
}

#content #browse_menu li a:hover {
    color: #555;
    border-bottom: 1px solid #555;
}

#about {
    text-align: left;
    padding: 5px;
    min-height: 460px;
    margin-left: 5px;
    margin-right: 5px;
    margin-bottom: 10px;
}

#about img {
    float: left;
}

#about h1 {
    color: #777;
    font: normal 2.4em Garamond, GaramondPro;
    margin-top: 8px;
    margin-bottom: 5px;
    margin-top: -10px;
}

#about_content {
    color: #999;
    display: block;
    margin-left: 290px;
    padding-right: 10px;
    min-height: 200px;
}

#about_content h2 {
    font: normal 1.8em Garamond, GaramondPro;
    margin-bottom: 5px;
    margin-top: 2px;
}

#about_content p {
    margin-bottom: 10px;
}

.hline {
    width: 920px;
    margin-left: -10px;
    height: 1px;
    background: #333;
}

#bottom {
    min-height: 71px;
}

#bottom div {
    color: #888;
}

#bottom #title {
    margin-top: 4px;
    margin-bottom: 6px;
}


#bottom .head {
    float: left;
    margin-bottom: 10px;
    padding-left: 10px;
    color: #777;
    font: normal 1.9em Garamond, GaramondPro;
}

#bottom .comment {
    display: block;
    padding-top: 9px;
    padding-left: 9px;
    overflow: hidden;
}

#bottom #comment p {
    color: #333;
    font-size: 1em;
}

#bottom #information {
    clear: both;
    height: 34px;
    border-top: 1px solid #333;
}

#bottom .header {
    color: #2B2B2B;
}

#bottom #meta {
    float: left;
    border-right: 1px solid #333;
    padding: 10px;
}

#bottom #exif {
    float: left;
    padding: 10px;
}

#bottom #comments_count {
    float: right;
    border-left: 1px solid #333;
    padding: 10px;
}

#bottom #permalink {
    float: right;
    border-left: 1px solid #333;
    padding: 10px;
}

#bottom a {
    color:#888;
}

#bottom a:hover {
    color: #FFF;
}

/*
 Post Comments
*/

#post_comments h2 {
    font: normal 1.9em Garamond, GaramondPro;
    margin-bottom: 15px;
}

#post_comments {
    margin-left: 15px;
}

#post_comments h3.leave_comment {
    width: 100%;
    font: normal 1.7em Garamond, GaramondPro;
    margin-bottom: 5px;
}

#comment_line {
    border-top: 1px solid #333;
    width: 95%;
    margin: 0 auto;
    margin-top: 20px;
    margin-bottom: 15px;
}

#comments h3 {
    display: inline;
    font: normal 1.5em Garamond, GaramondPro;
    border-right: 1px solid #333;
    padding-right: 15px;
    margin-right: 15px;
    padding-top: 3px;
}

#comments dt {
    width: 100%;
    margin-left: 5px;
    margin-bottom: 10px;
}

#comments dd {
    margin-bottom: 20px;
    margin-left: 5px;
}

#post_comments form p {
    margin-bottom: 5px;
}

#post_comments .errorlist {
    list-style-type: none;
    color: #990000;
}

/* Footer */

#footer {
    color: #333;
    padding-bottom: 5px;
    margin: 10px auto;
    width: 99%%;
}

#footer #copyright {
    float: right;
}

/* Media Queries */

@media all and (-webkit-min-device-pixel-ratio: 1.5) {
    #top #logo {
        background-image: url('/media/static/logo_2x.png');
        background-size: 236px 58px;
    }
}

/* iPhone */

@media only screen 
and (min-device-width : 320px) 
and (max-device-width : 568px) {
    body {
        font-size: 3em;
    }
    
    #wrap {
        max-width: 100%;
        padding-bottom: 79px;
    }
    
    #top {
        height: 150px;
        margin-top: -73px;
        margin-bottom: 4px;
    }
    
    #top #logo {
        float: none;
        margin: 0 auto;
    }
    
    #top #menu {
        height: 20px;
        text-align:center;
    }
    
    #top #menu ul {
        font-size: 1.25em;
        bottom: -8px;
        top: 50px;
        float: none;
        display: inline-block;
        position: static;
    }
    
    #top .hr {
        display: block;
        position: absolute;
        top: 153px;
        background-color: #333;
        width: 100%;
        height: 1px;
    }
    
    #content_wrap {
        width: 100%;
        margin: 0 auto;
    }
    
    #content {
        margin-bottom: 0;
        background: #2B2B2B;
        border-bottom: 1px solid #333;
        padding-top: 5px;
        padding-bottom: 3px;
        max-height: 100% !important;
    }

    #content img {
        max-height: 98%;
    }
    
    .image_content {
        border: 0;
        padding: 0;
        margin-left: 0;
    }
    
    #bottom #comments_count {
        display: none;
    }
    
    #bottom #exif {
        float: left;
    }
    
    #browse_grid img {
        padding: 5px;
    }
    
    #bottom #permalink {
        display: none;
    }
    
    #prevlink {
        display: none;
    }

    #nextlink {
        display: none;
    }
    
    .navigate {
        display: none;
    }
    
    #bottom #exif {
        display: none;
    }
    
    #bottom #meta {
        border: 0;
    }
    
    #footer #copyright {
        float: left;
        margin-left: 5px;
        margin-bottom: 5px;
    }
}

@media all and (max-width: 1030px) {
    #prevlink {
        left: 10px;
    }

    #nextlink {
        right: 10px;
    }
}

@media all and (max-width: 919px) {
    #content_wrap {
        width: 96%;
        margin: 0 auto;
    }
}

@media all and (max-width: 600px) {
    #wrap {
        padding-bottom: 128px;
    }
    
    #top {
        height: 54px;
        margin-top: -73px;
        margin-bottom: 4px;
    }
    
    #top #menu ul {
        bottom: -8px;
    }
    
    #content_wrap {
        width: 100%;
    }
    
    #content {
        background: #2B2B2B;
        border-bottom: 1px solid #333;
        padding-top: 5px;
        padding-bottom: 3px;
        margin-bottom: 0;
    }
    
    #content img {
        max-height: 98%;
    }
    
    .image_content {
        border: 0;
        padding: 0;
        margin-left: 0;
    }
    
    #bottom #comments_count {
        display: none;
    }
    
    #bottom #exif {
        float: left;
    }
    
    #browse_grid img {
        padding: 5px;
    }
}

@media all and (max-width: 500px) {
    #wrap {
        padding-bottom: 79px;
    }
    
    #top #logo {
        float: none;
        margin: 0 auto;
        background-size: 118px 29px;
        width: 118px;
        height: 29px;
    }
    
    #top #menu {
        height: 20px;
        text-align:center;
    }
    
    #top #menu ul {
        top: 50px;
        float: none;
        display: inline-block;
        position: static;
    }
    
    #bottom #permalink {
        display: none;
    }
    
    #prevlink {
        display: none;
    }

    #nextlink {
        display: none;
    }
    
    .navigate {
        display: none;
    }
}

@media all and (max-width: 420px) {
    #bottom #exif {
        display: none;
    }
    
    #bottom #meta {
        border: 0;
    }
    
    #footer #copyright {
        float: left;
        margin-left: 5px;
        margin-bottom: 5px;
    }
}

/* Map */

#map { 
    margin: 0 auto;
    width: 98%;
    height: 700px;
}

#map .leaflet-popup-content-wrapper {
    background: #2B2B2B;
}

#map .leaflet-popup-tip {
    background: #2B2B2B;
}

#map .map_thumb img {
    width: 122px;
    height: 122px;
}

#map .markerclustercount {
    margin-top: 8px;
    padding-right: 2px;
    display: inline-block;
    font-size: 14px;
    color: #FFF;
}

